--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Freeze an Express.js application into a set of static files",
   "main": "frozen.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test && jshint src"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/denis-sokolov/frozen-express/issues"
   },
-  "homepage": "https://github.com/denis-sokolov/frozen-express"
+  "homepage": "https://github.com/denis-sokolov/frozen-express",
+  "dependencies": {
+    "through2": "^0.5.1"
+  },
+  "devDependencies": {
+    "better-assert": "^1.0.0",
+    "jshint": "^2.5.1",
+    "mocha": "^1.20.1"
+  }
 }
