--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/denis-sokolov/frozen-express",
   "dependencies": {
-    "through2": "^0.5.1"
+    "supertest": "^0.13.0",
+    "through2": "^0.5.1",
+    "vinyl": "^0.2.3"
   },
   "devDependencies": {
     "better-assert": "^1.0.0",
+    "express": "^4.4.2",
     "jshint": "^2.5.1",
     "mocha": "^1.20.1"
   }
