Generate proper extensions by MIME

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/denis-sokolov/frozen-express",
   "dependencies": {
+    "mime": "^1.2.11",
     "promise": "^5.0.0",
     "supertest": "^0.13.0",
     "through2": "^0.5.1",
