--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Freeze an Express.js application into a set of static files",
   "main": "src/frozen.js",
   "scripts": {
-    "test": "mocha test && jshint src"
+    "coverage": "istanbul cover --report lcovonly _mocha test && coveralls < coverage/lcov.info",
+    "lint": "jshint src",
+    "test": "mocha test && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,9 @@
   },
   "devDependencies": {
     "better-assert": "^1.0.0",
+    "coveralls": "^2.10.0",
     "express": "^4.4.2",
+    "istanbul": "^0.2.11",
     "jshint": "^2.5.1",
     "mocha": "^1.20.1"
   }
