--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "coveralls": "^2.10.0",
     "express": "^4",
+    "express3": "*",
     "istanbul": "^0.2.11",
     "jshint": "^2.5.1",
     "mocha": "^1.20.1"
