--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "report-coverage": "istanbul cover --report lcovonly _mocha test test/functional && coveralls < coverage/lcov.info",
     "coverage": "istanbul cover _mocha test test/functional",
     "lint": "jshint src",
-    "test": "mocha test test/functional && npm run lint"
+    "test": "mocha test test/functional && npm run lint",
+    "test-server-run": "mocha ./test/server/run.js"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,14 @@
     "vinyl": "^0.2.3"
   },
   "devDependencies": {
+    "argparse": "^0.1.15",
     "coveralls": "^2.10.0",
     "express": "^4",
     "express3": "*",
+    "gulp": "^3.8.1",
     "istanbul": "^0.2.11",
     "jshint": "^2.5.1",
-    "mocha": "^1.20.1"
+    "mocha": "^1.20.1",
+    "request": "^2.36.0"
   }
 }
