--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "mocha test test/functional && npm run lint",
     "test-server-run": "mocha ./test/server/run.js"
   },
+  "bin": "src/bin.js",
   "repository": {
     "type": "git",
     "url": "http://github.com/denis-sokolov/frozen-express.git"
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/denis-sokolov/frozen-express",
   "dependencies": {
     "error-factory": "0.0.15",
+    "gulp": "^3.8.1",
     "mime": "^1.2.11",
     "promise": "^5.0.0",
     "supertest": "^0.13.0",
@@ -36,7 +38,6 @@
     "coveralls": "^2.10.0",
     "express": "^4",
     "express3": "*",
-    "gulp": "^3.8.1",
     "istanbul": "^0.2.11",
     "jshint": "^2.5.1",
     "mocha": "^1.20.1",
