--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/denis-sokolov/frozen-express",
   "dependencies": {
-    "error-factory": "0.0.15",
+    "error-factory": "^0.1.0",
     "gulp": "^3.8.1",
     "mime": "^1.2.11",
     "promise": "^5.0.0",
