--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,20 @@
 	},
 
 	"rules": {
+		// Enforce
+		"block-scoped-var": 2,
+		"default-case": 2,
+		"guard-for-in": 2,
+		"no-plusplus": 2,
+		"no-self-compare": 2,
+		"no-void": 2,
+		"no-warning-comments": 2,
+		"no-undefined": 2,
+
 		// Style
-		"quotes": "single",
+		"comma-style": [1, "last"],
+		"quote-props": [1, "as-needed"],
+		"quotes": [1, "single"],
 
 		// Relax style
 		"curly": false,
