--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Freeze an Express.js application into a set of static files",
   "main": "src/frozen.js",
   "scripts": {
-    "report-coverage": "istanbul cover --report lcovonly _mocha test test/functional && coveralls < coverage/lcov.info",
-    "coverage": "istanbul cover _mocha test test/functional",
+    "report-coverage": "istanbul cover --report lcovonly _mocha test && coveralls < coverage/lcov.info",
+    "coverage": "istanbul cover _mocha test test",
     "lint": "eslint src",
-    "test": "mocha test test/functional && npm run lint"
+    "test": "mocha test && npm run lint"
   },
   "bin": "src/bin.js",
   "repository": {
