Slow down and only allow 5 jobs at once

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp": "^3.8.1",
     "mime": "^1.2.11",
     "promise": "^7.0.1",
+    "queue": "^3.1.0",
     "supertest": "^1.0.1",
     "through2": "^2.0.0",
     "vinyl": "^1.0.0"
