--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/denis-sokolov/frozen-express/issues"
   },
   "homepage": "https://github.com/denis-sokolov/frozen-express",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "dependencies": {
     "argparse": "^1.0.2",
     "array-unique": "^0.3.2",
